some further changes

--- a/manuscript_v1.Rmd
+++ b/manuscript_v1.Rmd
@@ -116,32 +116,22 @@ In the full dataset, KT observed 54.24% of the total detections (3,996/7,367) an
 
 ## Habitat selection in forest birds
 
-The final model was a GLMM with Poisson error distribution (and log link) fitted with the BOBYQA optimiser (see Table 2 for the model selection steps). It contained the all-species abundance as the response and crossed random effects of sampling point and day. The predictors selected as important were observer, week, canopy heterogeneity, tree density, dominant ground vegetation and its interaction with week. 
+The final model was a GLMM with Poisson error distribution (and log link) fitted with the BOBYQA optimiser (Table 2). It contained the total bird abundance as the response, and crossed random effects of sampling point and day. The predictors selected as important were observer, week, canopy heterogeneity, tree density, dominant ground vegetation and its interaction with week. 
 
-Table 2: GLMMs using abundance of all birds as the response. Models at each step of term addition/deletion are shown (as ‘all.x’) with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘CH’: canopy heterogeneity; ‘TD’: tree density; ‘DOM’: dominant ground vegetation.
-
-Model	df	Predictors	logLik	AICc	Weight
-all.6	15	log(CH) + log(TD) + DOM + week:(DOM) + observer + (1|point) + (1|day) + week 	-1,029.278	2,089.804	0.626
-all.5	17	log(CH) + log(TD) + DOM + week:(DOM) + week:log(CH) + week:log(TD) + observer + (1|point) + (1|day) + week 	-1,028.312	2,092.223	0.187
-all.4	17	log(CH) + log(TD) + DOM + week:(DOM) + week:log(CH) + week:log(TD) + observer + (1|point) + (1|day) + week 	-1,028.312	2,092.223	0.187
-all.3	9	log(CH) + log(TD) + week:log(CH) + week:log(TD) + observer + (1|point) + (1|day) + week 	-1,042.747	2,103.953	0.001
-all.2	7	log(CH) + log(TD) + observer + (1|point) + (1|day) + week 	-1,046.654	2,107.594	0.0001
-all.1	5	observer + (1|point) + (1|day) + week	-1,049.992	2,110.136	0.00002
-
-Selected model, ‘all.6’:
-bird abundance ~ observer + (1|point) + (1|day) + week + log(canopy heterogeneity) + log(tree density) + ground vegetation + week:(ground vegetation)
+***Table 2: GLMMs using abundance of all birds as the response. Models at each step of term addition/deletion are shown (as ‘all.x’) with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘CH’: canopy heterogeneity; ‘TD’: tree density; ‘DOM’: dominant ground vegetation. Selected model, ‘all.6’: bird abundance ~ observer + (1|point) + (1|day) + week + log(canopy heterogeneity) + log(tree density) + ground vegetation + week:(ground vegetation)***
 
 There was an overall increase in bird abundance towards the end of the study period. Otherwise, abundance showed positive and negative trends with log-transformed variables of canopy heterogeneity and tree density respectively (Figure 3). These trends did not change detectably over the course of the study period. 
 
 Here, it is worth noting that in the process of selection of candidate habitat variables, canopy heterogeneity correlated negatively with canopy cover at a significant level (r = -0.533, p = 0.0017). However, the relation was stronger at high values of canopy cover and weaker at low values, which is a direct physical result—with higher average cover, the potential variability in cover is lower. Additionally, tree density correlated significantly with canopy cover, albeit in the opposite direction (r = 0.526, p = 0.002). In spite of these two correlations, heterogeneity and tree density remained uncorrelated (r = -0.246, p = 0.1745). Further, tree density also correlated negatively with proportion of deciduous trees at a significant level (r = -0.545, p = 0.0013), but seemed to be the more important predictor in the models.
 
-The relationship between abundance and dominant ground vegetation showed interesting patterns with time. While points with all the five categories of ground vegetation showed an increase in bird abundance as the season progressed, the degree to which it increased was starkly different in each. Points with Rubus sp. and those with Vaccinium sp. as the dominant ground vegetation were similar in terms of both average abundance and the increase in abundance with time; both were intermediate values. Points with graminoids in the ground layer had the lowest overall abundance as well as the lowest increase (Figure 3). Points with moss as the ground layer and those which had no dominant ground layer vegetation (category ‘Bare’) showed similar patterns—both had low abundances in the beginning but towards the end had the highest abundances. They showed the strongest increases in abundance. 
+The relationship between abundance and dominant ground vegetation showed interesting patterns with time. While all points---across the five categories of ground vegetation---showed an increase in bird abundance as the season progressed, the degree to which it increased was starkly different in each. Points with *Rubus* sp. and those with *Vaccinium* sp. as the dominant ground vegetation were similar in terms of both average abundance and the increase in abundance with time; both were intermediate values. Points with graminoids in the ground layer had the lowest overall abundance as well as the lowest increase (Figure 3). Points with moss as the ground layer and those which had no dominant ground layer vegetation (category ‘Bare’) showed similar patterns---both had low abundances in the beginning but towards the end had the highest abundances. They showed the strongest increases in abundance. 
 
-Figure 3: Abundance of all species of birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘all.6’. (A) Coloured lines show mean abundances changing with weeks on X-axis. Coloured ribbons around the lines represent 95% CIs. (B) Large circular dots represent mean bird abundance per point count. Whiskers represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13. (C, D) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13.
+***Figure 3: Abundance of all species of birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘all.6’. (A) Coloured lines show mean abundances changing with weeks on X-axis. Coloured ribbons around the lines represent 95% CIs. (B) Large circular dots represent mean bird abundance per point count. Whiskers represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13. (C, D) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13.***
+
 
 ## Habitat selection in forest bird guilds
 
-The final models for invertebrate-feeders and omnivores were very different (see Table 3 for model selection steps). The former was a Poisson GLMM (log link) with observer, proportion of deciduous trees and dominant ground vegetation as important fixed effects, while there was no main effect or interaction term of week. Point was included as a random effect. Although the dominant ground vegetation was a useful predictor, the only deviant group was ‘Graminoids’; points which had graminoids as the dominant ground layer vegetation tended to have lower abundance of invertebrate-feeding birds than points with other ground layers (Figure 4). Abundance decreased with proportion of deciduous trees, and notably, a polynomial term did not give a better fit, although mixed forests with intermediate proportions of deciduous trees are believed to have higher diversity and abundance. Neither of the two trends changed detectably with time.
+In terms of the selected models, habitat selection in invertebrate-feeders and in omnivores were very different (Table 3). The former was a Poisson GLMM (log link) with observer, proportion of deciduous trees and dominant ground vegetation as important fixed effects, while there was no main effect or interaction term of week. Point ID was included as a random effect. Although the dominant ground vegetation was a useful predictor, the only deviant group was ‘Graminoids’; points which had graminoids as the dominant ground layer vegetation tended to have lower abundance of invertebrate-feeding birds than points with other ground layers (Figure 4). Abundance decreased with proportion of deciduous trees, and notably, a polynomial term did not give a better fit, although mixed forests with intermediate proportions of deciduous trees are believed to have higher diversity and abundance. Neither of the two trends changed detectably with time.
 
 For omnivores, the final model was a negative binomial GLMM (log link) also containing just one random effect, of point. Observer, week, habitat class, tree density and canopy heterogeneity along with its interaction with week were all important and contributed to model parsimony. Omnivore abundance also increased as the season progressed, but overall abundance was higher in forest edges than in forest interiors or roadside patches (Figure 5). This trend did not interact with week. Omnivore abundance, similar to general bird abundance, decreased with tree density but showed interesting trends with canopy heterogeneity. At first, the trend appeared to be slightly negative yet almost insignificant, but with every week the trend became more and more positive, such that in week 13 it was very strong. Omnivores seemed to be highly abundant in points with the most heterogeneity, while abundances in points with the lowest heterogeneity remained the same as in week 1 (Figure 5). 
 
